--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "lucide-react": "^0.533.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
     "styled-components": "^6.1.19",
+    "vite-plugin-pwa": "^1.0.2",
+    "workbox-window": "^7.3.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
