--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,10 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
+.env
+.env.development
+.env.test
+.env.production
 
 # PWA generated files
 public/sw.js
