--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: npx tsc --noEmit
 
       - name: Build application
-        run: npm run build
+        run: npm run build:production
         env:
           NODE_ENV: production
 
