--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ dist-ssr
 public/sw.js
 public/manifest.webmanifest
 
+# TypeScript build info
+*.tsbuildinfo
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
