--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
+    "starving-orange": "^1.1.5",
     "styled-components": "^6.1.19",
+    "ulid": "^3.0.1",
     "vite-plugin-pwa": "^1.0.2",
     "workbox-window": "^7.3.0",
     "zustand": "^5.0.6"
