--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     ]
   },
   "dependencies": {
+    "@types/qrcode": "^1.5.5",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.533.0",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
